--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
 .bannerContent{
-    background-image: url('../assets/image/fondo-banner.jpg');
+    background-image: url('../public/fondo-banner.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
