--- a/styles/Banner.module.css
+++ b/styles/Banner.module.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
-.bannerContent{
+/* .bannerContent{
     background-image: url('../public/fondo-banner.jpg');
     background-position: center;
     background-repeat: no-repeat;
@@ -7,7 +7,7 @@
     padding-top: 65px;
     padding-bottom: 62px;
     margin-bottom: 200px;
-}
+} */
 .number{
     color: white;
     font-family: 'Open Sans', sans-serif;
