--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -18,6 +18,14 @@
     width: 100%;
     height: auto;
 }
+@media (max-width:1199px){
+    .contentPerfilAbout{
+        text-align: center;
+    }
+    .contentPerfilAbout img{
+        width:70%;
+    }
+}
 .cuadroTexto{
     background: white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
