--- a/styles/Contacto.module.css
+++ b/styles/Contacto.module.css
@@ -1,24 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap');
+
+.contentContacto{
+    padding-bottom:400px;  
+}
+
 @media (max-width:990px){
     .contentContacto{
         padding-bottom:120px;
     }
 }
-/* .contentContacto::after{
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: .7;
-    z-index:0;
-    background-image: url('../assets/image/logo-fondo-contacto.png');
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-} */
 
 .contentContacto h2{
     text-align: center;
