--- a/styles/Info.module.css
+++ b/styles/Info.module.css
@@ -69,6 +69,9 @@
     height: 100vh;
     background-color: rgba(51, 51, 51, 0.9);  
  }
+ .descriptionBoxMore strong{
+   color: #707070;
+ }
  .boxesMoreStyle{
     border-radius:5px;
     padding: 40px 35px;
@@ -96,8 +99,18 @@
     right:-15px;
  }
  .contentImgBoxesMore{
+    max-width: 391px;
+    margin: auto;
+    height: auto;
     text-align: center;
  }
+
+ .contentImgBoxesMore img{
+   width: 100%;
+   height: auto;
+   margin: auto;
+ }
+
  .titleBoxMore h2{
     margin-top:75px;
     margin-bottom:30px;
